--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
             padding: 10px 20px;
             border-radius: 20px;
             cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        .post-button:hover {
+            background-color: #7a00a8; /* Darker shade on hover */
         }
 
         #feed {
@@ -86,6 +91,12 @@
         .footer-links a {
             margin-right: 10px;
             color: #fff;
+            text-decoration: none; /* Remove underline */
+            transition: color 0.3s;
+        }
+
+        .footer-links a:hover {
+            color: #9400D3; /* Highlight color on hover */
         }
 
         .footer-logo {
